Upload TOP HTML Training+update alt for img

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,6 @@
             <p><a href="https://www.theodinproject.com/about">Click Me</a></p>
 
             <p><a href="about.html">About Us</a></p>
-            <img src="../images/dog.jpg" alt="That dog Charles">
+            <img src="../images/dog.jpg" alt="That dog Charles X">
     </body>
 </html>
